[gd_scene load_steps=14 format=2]

[ext_resource path="res://DeathMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/restarthover.png" type="Texture" id=2]
[ext_resource path="res://assets/restartpressed.png" type="Texture" id=3]
[ext_resource path="res://assets/restart.png" type="Texture" id=4]
[ext_resource path="res://assets/optionspressed.png" type="Texture" id=5]
[ext_resource path="res://assets/finalscoredisplay.png" type="Texture" id=6]
[ext_resource path="res://assets/options.png" type="Texture" id=7]
[ext_resource path="res://assets/optionshover.png" type="Texture" id=8]
[ext_resource path="res://assets/RobotoMono-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/RobotoMono-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
font_data = ExtResource( 9 )

[node name="DeathMenu" type="CanvasLayer"]
offset = Vector2( 0, -5000 )
transform = Transform2D( 1, 0, 0, 1, 0, -5000 )
script = ExtResource( 1 )

[node name="Move" type="Tween" parent="."]

[node name="Transparenty" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1042.0
margin_right = 1848.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="Tween" parent="Transparenty"]

[node name="SnakeDisplay" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -213.0
margin_right = 400.0
margin_bottom = 426.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreIndicator" type="Label" parent="."]
margin_left = 142.932
margin_top = 156.531
margin_right = 292.932
margin_bottom = 215.531
rect_rotation = -4.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestIndicator" type="Label" parent="."]
margin_left = 147.527
margin_top = 401.605
margin_right = 297.527
margin_bottom = 460.605
rect_rotation = -4.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 296.113
margin_top = 147.697
margin_right = 392.113
margin_bottom = 200.697
rect_rotation = -5.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Best" type="Label" parent="."]
margin_left = 283.432
margin_top = 393.974
margin_right = 379.432
margin_bottom = 446.974
rect_rotation = -7.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="."]
margin_left = 192.5
margin_top = 275.5
margin_right = 392.5
margin_bottom = 475.5
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="."]
margin_left = 264.0
margin_top = 273.5
margin_right = 464.0
margin_bottom = 473.5
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 11 )]

[node name="Tween" type="Tween" parent="OptionsMenu"]

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="close" from="OptionsMenu" to="." method="_on_OptionsMenu_close"]
